--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-google": "^0.3.0",
     "passport-google-oauth": "^0.2.0",
     "passport-instagram": "^0.1.2",
+    "passport-linkedin": "^0.1.3",
     "passport-twitter": "^1.0.3",
     "serve-favicon": "~2.2.0"
   }
